--- a/examples/madrid_private_parking_osm.ipynb
+++ b/examples/madrid_private_parking_osm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfMbcNsOtUO2D4yRzihNuI",
+      "authorship_tag": "ABX9TyOw+SK+96rsh9pX8etumoW7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "t2t5LgK72dH4"
       },
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "IQYszQEy4kSn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "WeWtGJV42gHw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "6Re-iL7G6ggf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "o9exMEcH6gFw"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "pIxVUcTI4rnV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "id": "F1KfC1k85CHT",
         "outputId": "76d1212b-f359-4b22-fe9b-556493372b0c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
         "id": "UKYSNSd16XKA",
         "outputId": "52b82f1f-070c-4b22-9c0f-9d20dedb2b11"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
         "In a geoimage segmentation dataset, the ground truth data consists of polygons representing objects, with each polygon assigned an ID corresponding to its semantic class.\n",
         "\n",
         "\n",
-        "We can download the data using overpass turbo api queries."
+        "We can download the data using overpass turbo api queries. You can prepare your queries here https://overpass-turbo.eu/#"
       ],
       "metadata": {
         "id": "EnMg8NqN71mv"
@@ -473,7 +473,7 @@
       "metadata": {
         "id": "-XPWw4G85ffv"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
         "id": "2rYijgCy5mek",
         "outputId": "fd8c92a9-012d-407a-9e77-c5846b9f5d71"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +714,7 @@
       "metadata": {
         "id": "C3ki41Uq5EK9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +754,7 @@
       "metadata": {
         "id": "cLrHcqPS5tID"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +779,7 @@
         },
         "outputId": "50ce435a-b807-4365-c3b1-55d08847824d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1338,7 +1338,7 @@
         },
         "outputId": "a225462a-3a68-477a-e05a-923b4fbefd72"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1854,7 +1854,7 @@
         },
         "outputId": "ca4f875d-7e85-47d0-f0cd-29b109cda62c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1914,7 +1914,7 @@
       "metadata": {
         "id": "tBMsVoWP6_4n"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1962,7 +1962,7 @@
         },
         "outputId": "65b7b63d-9274-4c27-b9f5-85c486d9d9e9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
